RESOLVED FIXED56481
fix stroked text drawing in skia
https://bugs.webkit.org/show_bug.cgi?id=56481
Summary fix stroked text drawing in skia
Mike Reed
Reported 2011-03-16 13:16:34 PDT
When we draw text via skia, we need to reestablish the typeface/textsize/encoding when we draw the stroke layer.
Attachments
patch for 56481 (1.82 KB, patch)
2011-03-16 13:21 PDT, Mike Reed
no flags
Mike Reed
Comment 1 2011-03-16 13:21:17 PDT
Created attachment 85961 [details] patch for 56481
James Robinson
Comment 2 2011-03-16 13:55:24 PDT
Comment on attachment 85961 [details] patch for 56481 R=me. Would you like commit-queue+ as well? (set commit-queue? on the patch or use the --request-commit flag to webkit-patch upload to request this in the future). Also, please try to upload patches from the root of the WebKit try and not from within the Source/ directory in the future.
WebKit Commit Bot
Comment 3 2011-03-16 16:46:37 PDT
Comment on attachment 85961 [details] patch for 56481 Clearing flags on attachment: 85961 Committed r81290: <http://trac.webkit.org/changeset/81290>
WebKit Commit Bot
Comment 4 2011-03-16 16:46:41 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5 2011-03-16 17:49:29 PDT
http://trac.webkit.org/changeset/81290 might have broken Windows 7 Release (Tests) The following tests are not passing: fast/events/popup-blocking-timers.html
Note You need to log in before you can comment on or make changes to this bug.