2011-03-16  Mike Reed  <reed@google.com>

Reviewed by James Robinson.

        Reestablish typeface/size/encoding when drawing stroked text
        https://bugs.webkit.org/show_bug.cgi?id=56481

        No new tests. LayoutTests/svg/css/composite-shadow-text.svg

        * platform/graphics/skia/SkiaFontWin.cpp:
        (WebCore::paintSkiaText):

Canonical link: https://commits.webkit.org/71166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81290 268f45cc-cd09-0410-ab3c-d52691b4dbfc